--- a/lore/adelsfamiljer.html
+++ b/lore/adelsfamiljer.html
@@ -16,16 +16,25 @@
 En ambitiös familj, sedan de blev den kungliga familjen har de sökt andra former av erövrning eller metoder att framstå som mäktiga än krigsföring. Det var under deras ledning som mycket av den senare architekturen skapades. Exempelvis fanns endast magiskolan i huvudstaden innan de tog över. Efteråt byggdes magiskolor i Urthil, Del Irakh. Dock är den i huvudstaden den mest kända. Det kan dock argumenteras vilken som är bäst, Elearcs metodiska sätt att leda undervisningen låter dem kompensera för huvudstadens rikedom. Deras ledande av Nerau (kontinent och landet) har lett till mycket välstånd och ett flertal kungar har varit älskade av folk och adeln., dock har Gloomtide förklarat ganska många konflikter mot underdark. Förmodligen för att bli kända som familjen som återfann Lithauri (exular). Inget tur så här långt.
      <br>
      <br>
+     Deras sigill är en räv, då deras första ledare var känd som “Brynden Lautic” eller den röda räven, eftersom han reste sig till makten igenom manipulation, diplomati samt att spela ut sida rivaler mot varandra. Detta karaktärsdrag har varit konstant igenom deras tid som adelsfamilj, en blandning av älskan ifrån folket, terror samt allianser har hållit dem vid makten
+     <br>
+     <br>
      Sheruy, Parhu
      <br>
      <br>
      En lugn och stillsam familj, sedan Deermore gick i revolt har Parhu och i förlängingen Sheruy stått för majoriteten av kontinentens växtproduktion med dess stora fruktträdgårdar. Även majoriteten av kontinentens träd, papper producerat. De har länge varit lojala mot kronan ochmed deras motvillighet till snabba förändringar, ett skäl till att de specialiserar med odling. I Parhu finns även den enda större gruppen elfs eller half-elf utanför kontinentens nord östra del. Kontinentens största biblotek finns även här, där en majoritet av landets historia sparats
      <br>
      <br>
+     Deras sigill är ett äppelträd, eftersom deras första ledare Vance Parhu, ska enligt legenden offrat till Leisa, naturgudinnan och som svar på hans offer ska det första äppelträdet ha vuxit fram
+     <br>
+     <br>
     Morui, Last Light
     <br>
     <br>
     Också en relatives ambitiös familj familj som långsamt glömmer dåtiden, under tiden mellan FMK och AMK var de den enda familjen som förbredde inför Seuris återkomst, och det var emot deras rekommendation  som Dol Ithil övergavs. De har även kontinentens enda stad som har en faktiskt stor krigsför bredd flotta.
+    <br>
+    <br>   
+      Deras sigil en elefant, eftersom krigselefanter har varit deras mest kännetecknande bidrag till Nerau 
     <br>
     <br>
     Autritic, Urthil
@@ -34,10 +43,16 @@ En ambitiös familj, sedan de blev den kungliga familjen har de sökt andra form
     Autric har ganska länge varit självförsörjande, med en inhemsk fiskproduktion och begränsad odling och närhet till metaller i den närliggande bergskedjan har de under lång tid varit redo att hantera krissituationer. Vilket de har behövt iochmed att det inte finns något anpassad hamn på andra sidan sjön, och träsket samt bergskedjan har gjort dem svåra att komma åt till fots och deras isolerade livstil ledde under lång tid till att staden var mer eller mindre obesökt. Sedan en av kontinentens 3 magiskolor konstruerades i Staden har den fått alltmer uppmärksamhet. Dock har staden ingen riktig miitär, eller sätt mycket stridigheter, så trots att staden kanske är den som skulle kunna vara bäst förbredd för en belägring, är den långt ifrån bäst förbredd nu.
     <br>
     <br>
+    Deras sigill höken, dels som ett öknamn då ett vanligt kännetecken på släkten varit ovanligt skarpa näsor, men även för deras skarpa sikt framåt och förmåga att inte agera utan eftertanke
+    <br>
+    <br>
     Untua, Neigne
     <br>
     <br>
     Neigne är enda staden i ett arktiskt liknande förhållande, orsakad av en kall havström som kommer in ifrån västerut, i samband med att Mons är kontinentens högsta berg har ledt till att detta område har en konstant permafrost. Konstligt nog är området söderut helt bördigt mark, ett klimat fenomen som hittils är oförklarat. Neigne är enda staden där Gudinnan Va är helgad. Något som har ledt till att de har som vanlig begravningsritual att offra kroppen i den så kallade Ice cave, en grotta i Mons, kontinentens kallaste plats. Neignes grundare har sin grav bara några hundra meter ifrån Neigne, Ben Untua, det är en vanlig avrättningsmetod att skicka ut den dömde till graven utan utrustning för att skydda mot kylan, att nå graven sägs ge tillbaka den döende sin ära samt ger dem en sista chans att bevisa sig.. Av de tusentalet som avrättats på detta sättet har endast 3 nått graven. Majoriteten klarade sig endast ett tiotal meter, endast de som nådde graven tilläts begravas där, övriga placeras i Ice cave.
+    <br>
+    <br>
+    Deras sigill en jättevarg, direwolf, då den är ett av de få djuren som klarar kylan deras stad är omringad av
     <br>
     <br>
      Smraut, Mirthau
@@ -46,15 +61,58 @@ En ambitiös familj, sedan de blev den kungliga familjen har de sökt andra form
     Smraut är enda familjen sommer eller mindre endast består av dvärgar. Området Mirthau är belägen i är det mest mineralrika området på kontinenten, vilket har gjort staden till den näst rikaste efter huvudstaden. Även om alla städe har smeder är det dem i Mirthau som anses bäst, och det är inte ovanligt att smedlärningar skickas till staden för att lära sig. Dock är det endast de med mest naturlig talang som får lära sig dvärgarnas tekniker. Enligt vissa har dvärgarna hittat en metod för att ta värme av en inaktiv vulkan för att värma deras smedjor, detta är dock bara spekulationer, dock är vulkanen riktig och en plats har används för att begrava familjen Smraut under många generationer
     <br>
     <br>
+    Deras sigill ett berg, symboliskt för deras envishet.
+    <br>
+    <br>
     Elearc, Del Irakh
+    <br>
+    <br>
+    Elearc är en av de tre norra husen, eller kända som “The house of elves” då majoriteten av både adelsfamiljerna i nordöst och folket där är antingen alver eller halfelfs. 
+    <br>
+    <br>
+   I Del Irakh ska det finns en väg in i feywild, där hålls “The council of seasons”, ett gemensamt råd mellan De tre alviska husen, detta råd samlas endast 2 ggr om året, vid årets första dag, och årets 183 dag, samt vid döden av någon vktig person inom de tre alviska husens ledning. En viktig plats i Del Irakh är kungaträdgården, eller som den “the garden of kings”. Vid denna plats begravs varje ledare för Elearc och ifrån graven växer det sedan upp ett träd. Att äta av frukterna ifrån trädet ska enligt legend låta en ta del av gamla ledares vishet och råd.
+   I Del Irakh finns även ett av de tre magiska skolorna på Nerau, grundad kort efter Perte de Merau av dåtidens kung.
+   <br>
+   <br>
+   Deras symbol är Blåklockan. Ett namngivet till deras första ledare, efter att ha grundat “The garden of kings”. Möjligtvis för att symbolisera hur länge hans arv skulle vara.
+   <br>
+   <br>
+   Detta hus leder nu revolten mot Lautic
+   <br>
     <br>
     Neumi, Deermore
     <br>
+    <br>
+    Deermore har historiskt varit den platsen där majoriteten av kontinentens mat är odlad, eftersom deermores ö har haft kontinentes mest bördiga land, av denna anledningar har ön varit känd som Leisas Ö. På ön finns även ryktet att Fey färdats, vilket har lett till att få löften har gjorts till någon ifrån denna Ö.
+    <br>
+    <br>
+    Neumi är även en del av “The council of seasons,
+    <br>
+    <br>    
+    Deras symbol är ägget, eftersom deras grundares öknamn ska ha varit ägget, då han föddes skallig.
+    <br>
+    <br>    
+    Detta hus är en del i revolten och stödjer Elerac.
+    <br>
+    <br>    
     Ortua, Eaglegrove
     <br>
     <br>
+    Eaglegrove har alltid varit känd för att ha producerat de bästa bågskyttarna på kontinenten, något som har ledt till att alver ofta associerats med pilbågen, till absolut ingens förvåning är den vanligaste guden som helgats där Aperu, Jägarnas och jaktens gud. Det är inte alls ovanligt att aperus präster tjänar i militären.
+    <br>
+    <br>
+    De är också en del av “The council of seasons”.
+    <br>
+    <br>
+    Deras sigill är pilbågen.
+    <br>
+    <br>
+    Detta hus stödjer Elerac i revolten
+    <br>
+    <br>
      (Mearaukia, Ryuski)
-     
+     sigil:
+     <img src="img/sigil.jpeg"
      <h3> Previous History </h2>
      Den första kungliga familjen var House <span class="fet"> Meraukia </span>, enligt legenden ska endast deras blod kunna använda exulars sanna kraft, men efter några hundra år blev de tyrraniska, deras sista kung <span class="fet"> Mareuk </span> Den Grymme, hans sista försök att behålla makten var att gifta bort hans dotter, <span class="fet"> Vealen </span>, till det näst mäktigaste huset, <span class="fet"> Lautic </span. Hans livs största misstag. <span class="fet"> Vealen </span>, hatade sin far lika mycket som alla andra. Tillsammans med sin man, (som senare blev <span class="fet"> Lautics </span> första kung) <span class="fet"> Seoru Lautic </span> (senare <span class="fet">Seoru den vise </span>), ledde de en revolt som de resten av familjerna senare följde. Mot slutet av kriget var House <span class="fet"> Meraukia </span> näst intill utrotat, (dock ska enligt folksägner vissa ha överlevt i hemlighet). I och med deras kungliga blod blev House <span class="fet"> Lautic </span> nästa kungliga familj, ifall något senare skulle ske,för något annat hus att ta makten vore oerhört kortsigtigt, alltså gick övriga hus med på detta. Kriget är känt som Perte de Merau. 
      <br>
