rättning av ett misstag + TIllagt om huvudstaden

--- a/lore/adelsfamiljer.html
+++ b/lore/adelsfamiljer.html
@@ -19,6 +19,9 @@ En ambitiös familj, sedan de blev den kungliga familjen har de sökt andra form
      Deras sigill är en räv, då deras första ledare var känd som “Brynden Lautic” eller den röda räven, eftersom han reste sig till makten igenom manipulation, diplomati samt att spela ut sida rivaler mot varandra. Detta karaktärsdrag har varit konstant igenom deras tid som adelsfamilj, en blandning av älskan ifrån folket, terror samt allianser har hållit dem vid makten
      <br>
      <br>
+     Tekniskt sett har de två sigil, det andra är en drake, specifikt en drake av platinum. Detta just för att att de är den kungliga familjen, detta sigil är betydligt mer formelt, och representerar makten över hela kontinenten, snarare än adelfamiljen självt. Dock är detta sigilet som flaggan som svajar i Gryningsborgen (dvs det kungliga slottet) har
+     <br>
+     <br>
      Sheruy, Parhu
      <br>
      <br>
