--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <div> <a href="lore/pers.html"> Viktiga personer </a></div>
             <div> <a href="lore/adelsfamiljer.html"> Adelsfamiljer </a> </div>
             <div> <a href="lore/art.html"> Artivers </a> </div>
+            <div> <a href="lore/ryuski.html"> Ryuski </a> </div>
 
           </div>
       </div>
