Senaste uppdateringar: Dvärgar + mindre stjälande från andra

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             <div> <a href="lore/adelsfamiljer.html"> Adelsfamiljer </a> </div>
             <div> <a href="lore/art.html"> Artivers </a> </div>
             <div> <a href="lore/ryuski.html"> Ryuski </a> </div>
+            <div> <a href="lore/myth.html"> Myths </a> </div>
+            <div> <a href="lore/plats.html"> Myths </a> </div>
+
 
           </div>
       </div>
