Buggfix och liknande

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
       <div class="dropdown_lore">
         <h3>Lore</h3>
           <div class="dropdown_lore-content">
-            <div> <a href="lore/cre.html"> Creation </a> </div>
-            <div> <a href="lore/obj.html"> Viktiga föremål </a> </div>
-            <div> <a href="lore/pers.html"> Viktiga personer </a></div>
-            <div> <a href="lore/adelsfamiljer.html"> Adelsfamiljer </a> </div>
-            <div> <a href="lore/art.html"> Artivers </a> </div>
-            <div> <a href="lore/ryuski.html"> Ryuski </a> </div>
-            <div> <a href="lore/myth.html"> Myths </a> </div>
-            <div> <a href="lore/plats.html"> Myths </a> </div>
+            <div class="Undermeny"> <a href="lore/cre.html"> Creation </a> </div>
+            <div class="Undermeny"> <a href="lore/obj.html"> Viktiga föremål </a> </div>
+            <div class="Undermeny"> <a href="lore/pers.html"> Viktiga personer </a></div>
+            <div class="Undermeny"> <a href="lore/adelsfamiljer.html"> Adelsfamiljer </a> </div>
+            <div class="Undermeny"> <a href="lore/art.html"> Artivers </a> </div>
+            <div class="Undermeny"> <a href="lore/ryuski.html"> Ryuski </a> </div>
+            <div class="Undermeny"> <a href="lore/myth.html"> Myths </a> </div>
+            <div class="Undermeny"> <a href="lore/plats.html"> Platser </a> </div>
 
 
           </div>
@@ -29,10 +29,10 @@
       <br>
       <div class="dropdown_konflikter">
         <h3>Konflikter</h3>
-            <div class="dropdown_konflikter-content">
-              <div><a href="wars/thr.html"> Third Hethen Revolt</a></div>
-              <div><a href="wars/amk.html"> Second Mortis War </a></div>
-              <div><a href="wars/fmk.html"> First Mortis War </a></div>
+            <div class="dropdown_konflikter-content Undermeny">
+              <div class="Undermeny"><a href="wars/thr.html"> Third Hethen Revolt</a></div>
+              <div class="Undermeny"><a href="wars/amk.html"> Second Mortis War </a></div>
+              <div class="Undermeny"><a href="wars/fmk.html"> First Mortis War </a></div>
             </div>
       </div>
       <br>
@@ -40,10 +40,10 @@
     <h2> Pantheon </h2>
       <div class="dropdown_gods">
         <h3>Gods</h3>
-          <div class="dropdown_gods-content">
-            <div><a href="gods/g1.html"> Gen 1 </a></div>
-            <div><a href="gods/g2.html"> Gen 2 </a></div>
-            <div><a href="gods/g3.html"> Gen 3 </a></div>
+          <div class="dropdown_gods-content Undermeny">
+            <div class="Undermeny"><a href="gods/g1.html"> Gen 1 </a></div>
+            <div class="Undermeny"><a href="gods/g2.html"> Gen 2 </a></div>
+            <div class="Undermeny"><a href="gods/g3.html"> Gen 3 </a></div>
           </div>
       </div>
       <h2> Map </h2>
