--- a/jacuni.html
+++ b/jacuni.html
@@ -35,9 +35,13 @@
         </div>
 
         <div id="karta">
-        <div class="karta"> </div>
-
-        <div class="karta2" > </div>
+        <div class="karta_rad1"> </div>
+        <div class="karta_rad2"> </div>
+        <div class="karta_rad3"> </div>
+        <div class="karta_rad4"> </div>
+        <div class="karta_rad5"> </div>
+        <div class="karta_rad6"> </div>
+        <div class="karta_rad7" > </div>
         </div>
     </div>
     <script src="js/script.js"> </script>
