Hittade en motsägelse, lite greysong, lite green-heels

--- a/lore/plats.html
+++ b/lore/plats.html
@@ -15,5 +15,8 @@
     
     Det är inte heller ovanligt att se en av exular dragarna “ruva” ovanpå bergets topp stillsamt vakande över berget. Eld-berget är ett av väldigt få platser på kontinenten där dragarna inte verkar slåss, det har aldrig setts en konflikt mellan två drakar på denna plats. Det ryktas även att Exular drakarna ska ha grundat Drake wardens, en uråldrig organisation vars uppgift läge har varit att beskydda berget, de har aldrig dragit ut i krig, trots att de är en av världens mest välbeväpnade organisationer agerande som beskyddare för berget samt de dvärgar som är där innuti, inte helt olikt kungens personiliga livaktet. Av detta skäl är dvärgkonungen även känd som drake-ward som en av hans många titlar.
     
+    Gate:
+    Ägd av familjen Elassar . Fungerar som en barriär och ett fängelse till viss del eftersom det ser till att man kan ha olika former av natur/klimat på båda sidor eftersom alver/halfelfs kräver en annorlunda klimat. Egentligen inte så annorlunda, men årstider passerar långsammare på andra sidor, (1/3 hastighet) Vart tredje år sammanfaller vinter med vinter och är känt som ett sok och *Alltid* uppföljt av en tornado som passerar från väst till öst.
+
   </div>
    </body>
