--- a/lore/ryuski.html
+++ b/lore/ryuski.html
@@ -47,5 +47,9 @@ The knight of Copper
 <br>
 Dessutom finns det två riddare till, “The iron knights”, dessa är till kungens arvinge (eller i Portekhs fall arvingar, då han så långt saknar söner och har bara sina 2 bröder som är tvilligar)
 
+Paletir: ”The royal army” aka, Green-heels. 
+Började som en stadspark till Royski men blev över tid större och större. Har 2 unika karaktärsdrag, gröna skor (magiska samtliga fungerar som en dimension door till varandra) och hjälmar med gyllne ”hår” förhindrar mindkontrol och lögndetektor. Vilket är skälet till att alla ”dog” i senaste kriget. I verkligheten är de nu på Elven houses sida. Nya rekryter kommer i huvudsak ifrån Sorab.
+
+
         </div>
     </body>
