New lore, Azorgorth Arorgorth FàLithauri  Qu-cvili-fel:

--- a/lore/obj.html
+++ b/lore/obj.html
@@ -85,7 +85,48 @@ The last one a regalia so the magic could be bind
         Det är något onaturligt med dem. Något inte ifrån denna värld. Jag är både intresserad och avskräckt från det, <br>
         samtidigt vill jag som smed, nästan avguda matrialet.”
         
+        Azorgorth:
+        <br>
+        <br>
+        Översatt ifrån alviska:
+        <br>
+        <br>
+        Edsbundna/edhållare/edskapare
+        <br>
+        <br>
+        De är vad man i krigstid skulle kalla riddare även om grupperna annars är helt separata.
+        <br>
+        De har existerat i över ett millenium då hjältar ifrån *The kremilion* ska ha gjort eder (över själva templet) om att försvara kontinenten. Även om templet förstördes överlevde denna tradition.
+        <br>
+        Variation i eder påverkar mycket, då ifall man gjort en ed till en viss gud/tempel kan ett ett bättre än azorgorth vara tempelriddare. 
+        Vissa gör Eder om pacifism och räknas därmed självklart inte till riddare (ens i krigstid). I strikt mening är azorgorth inte en del av den kungliga armen utan en separat ”organisation” även om de ofta ställer upp när nöden kallar, dock ofta endast av det skälet att det låter dem skydda de oskyldiga.
+        <br>
+        <br>
 
+        Arorgorth:
+        <br>
+        <br>
+        Översatt ifrån alviska
+        <br>
+        <br>
+        Edbrytare
+        <br>
+        <br>
+        Arorgorth är en nyare term och skapades inte förrän <span klass= "cursiv"> kremilion</span> förstördes. Termen är dock lite missledande eftersom även de som skapar onda eder tillhör denna grupp. En utstött grupp, av självklara skäl. Mest känd i denna grupp är Seuri (även om exakt vilken ed han ska ha brutit är oklart).
+        Vid enstaka tillfällen har även de med goda eder räknats till denna grupp om deras metoder varit lite för ”extrema”.
+        Ordet är ofta även använt som en förolämpning till lögnare, de opålitliga eller brottslingar.
+        <br>
+        <br>
+        Fà-Alqi
+        <br>
+        <br>
+        Översatt ifrån alviska 
+        <br>
+        <br>
+        Från/ av (book exular)
+        Vanligtvis kända som spellbooks, original design är ifrån (B E) och samtliga är kopior av denna (eller kopior av denna). Sedan den gick förlorad är de äldsta och direkta kopiorna bland de mest värdefulla föremålen i Nerau då ju ”direktare” band till originalet ju kraftfullare (generellt). Därmed om du vill skapa en mäktig spellbook vill du använda en så kraftfull ”bas” som möjligt. I sort sätt alla direkta kopior finns inlåsta djupt under marken i magiskolor, då dessa som originalet aldrig kommer överträffas. En vanlig Fà(BE) kan skapas av vilken kopia som helst, då dessa är designade för kvantitet inte kvalité.
+        Generellt sätt kan inte en kopia överträffa originalet, men det finns undantag.
+        
 
         </div>
    </body>
