--- a/wars/fmk.html
+++ b/wars/fmk.html
@@ -15,17 +15,32 @@
       <span class="fet">Dol Mortis </span>
       , City of the Dead, ingen är riktigt säker på varför halvön reste sig ur havet, även om spekuleringar om att det tidigare var en del av underdark har cirklat runt.
   <br>
+  <br>
       Första Mortis kriget var en vinst för människorna, tyvärr försvann
       <span cursiv> Lithauri </span>
-      , the Grimoire of the 6 euxlar, under en räd mot huvudstaden, inte förstörd, men den blev nedkastad i underdark för att förhindra att Seuri, dåtidens hertig av
-      <span class="fet">Dol Mortis </span>
-      . Många expeditioner har utförst för att hitta den, men den är ännu inte funnen, den tros fortfarande finnas där någonstans.
+      , the Grimoire of the 6 euxlar en tid därefter under Qu-cvili fel, inte förstörd, men den blev förlorad i underdark för att förhindra att Seuri, dåtidens hertig av
+      <span class="fet">Dol Mortis </span>.
+      <br>
+      <br>
+      Många expeditioner har utförst för att hitta den, men den är ännu inte funnen, den tros fortfarande finnas där någonstans.
+      <br>
       <br>
       <span class="cursiv">Seuri </span>
       , överlevde detta krig, och ledde även de odöda i Andra Mortis kriget.
       Efteråt skapades
       <span class="fet">Dol Ilith </span>
        ett fort vid enda ingången till bergskedjan, denna övergavs efter ca 500 år efter inga tecken på odöda.
+       Qu-cvili-fel:
+       <br>
+       <br>
+      Översatt ifrån alviska 
+      <br>
+      <br>
+       The chase of death, jakten då de döda, jakten på döden
+       <br>
+       <br> 
+       En period på ungefär 50-70 år efter first mortis war. Landet hade till stor del blivit förstört, inte bara av odöda ska de sägas, men övriga skyldiga flydde och gömde sig ty folkets vilja att få hämnd var lika stor som förlusterna de tagit. Kungen (finns namn?, om icke Arev) ledde en här, en armé ned till fe-berv (mörkret under) grottsystemet under kontinenten där Seuri flydde och Dol Mortis steg upp ifrån. Med sig hade han en Alvisk escort, 8 dussin azorgorth, flera kompanier dvärgar samt krigsveteranerna ifrån Green-heels utöver stora delar av kontinentens armé och ett stort bagage av hästar, proviant och annat följde med, men hans största vapen var (B E) debatterandet kontinentens mest mäktiga vapen. Det var en stor succés till en början, få vågade möta honom på slagfältet och de som vågade gav inte mycket motstånd, goblins, fe-quen (mörk - alv) kunde inte stoppa honom, ett flertal underjordiska monster ska även ha dödats vilket gav kontinenten en tidsfrist utan attacker från under. Ett flertal spejare färdades framför armen i jakt på Seuri, en grupp ledda av Marv (en azorgorth) återvände till ett arméläger övergivet, kungen försvunnen (och med honom B E), dock lämnades all mat och mycket av utrustningen kvar. Marv väntade en halv dag på jakt efter andra överlevare, utan att hitta några, därefter samlade de upp den mest värdefulla utrustningen, samt mat och började färdas till ytan, vilket är skälet till att utrustningen till Green-heels inte gick förlorad och kunde återskapas efteråt. Det var ett flertal dagars färd för att nå ytan, men Marv överlevde och berättade historien om vad som skedde. Hans grupp var de ända (kända) överlevarna.
+
      </div>
    </body>
 </html>
