Gnolls, Fe-berv, Arorgor,

--- a/lore/myth.html
+++ b/lore/myth.html
@@ -62,5 +62,22 @@ Det var sista gången någon såg Mathias.
 
 På grund av Geralds handlingar blir han förbannad av gudarna, att hans och alla hans efterblivande ska förändras, till folkslaget som nu bär hans familjsnamn. Detta inte på grund av mordet, ty gudarna blir sig väldigt lite om sådant som intresserar de dödliga, men ty magin som finns i löften, särskilt de om gästfrihet och konsekvenserna som sker om något sådan blir brytet 
 
+Gnolls:
+<br>
+<br>
+(Alviska suen-las)
+<br>
+<br>
+(Hunger/djur folk)
+<br>
+<br>
+I sydvästra Nerau fanns en gång en familj Gnoll i en by kring Neigne, livet var mycket svårt då snö och kyla var lika närvarande som fru och make. Få växter fanns där, annat än underjordiska svampar och specialister, så som ar-no-viel. Det var ett knapert liv men de klarade sig tills en vinter, en särskilt kall vinter. Men de hade byggt upp ett matförråd och slapp undan hungern åtminstone en tid, men som vinter skulle bli till får hade snön andra planer, ingen hade förutsätt en sådan vinter och familjen började svälta, mat hade de fortfarande men de behövde rationera den till den grad att man inte skulle överleva länge. Sen en kväll kom en främling, svårt skadad till dem. Hans och sin familj hade sökt Neigne och blivit överfallna av en isbjörn. Han var enda överlevaren.
+<br>
+<br>
+De tog emot honom som gäst, gav honom mat och lät honom stanna där tills han läkte. Men de insåg snabbt att om de gav honom mer mat skulle de själva svälta, de var inte ens säkra på om de skulle överleva utan att ge bort mat. De behövde något att äta.
+<br>
+<br>
+Främlingen sågs aldrig igen och ur huset kom endast gnolls, människolika varelser täckta av hår drivna av instinkt och hunger för gudarna hatar Arorgorth, säkskilt om man bryter gästfriden och skadar en någon man tagit in o sitt hem.
+
         </div>
     </body>
