--- a/lore/obj.html
+++ b/lore/obj.html
@@ -117,16 +117,37 @@ The last one a regalia so the magic could be bind
         Ordet är ofta även använt som en förolämpning till lögnare, de opålitliga eller brottslingar.
         <br>
         <br>
-        Fà-Alqi
+        Fà-Lithraui
         <br>
         <br>
         Översatt ifrån alviska 
         <br>
         <br>
-        Från/ av (book exular)
-        Vanligtvis kända som spellbooks, original design är ifrån (B E) och samtliga är kopior av denna (eller kopior av denna). Sedan den gick förlorad är de äldsta och direkta kopiorna bland de mest värdefulla föremålen i Nerau då ju ”direktare” band till originalet ju kraftfullare (generellt). Därmed om du vill skapa en mäktig spellbook vill du använda en så kraftfull ”bas” som möjligt. I sort sätt alla direkta kopior finns inlåsta djupt under marken i magiskolor, då dessa som originalet aldrig kommer överträffas. En vanlig Fà(BE) kan skapas av vilken kopia som helst, då dessa är designade för kvantitet inte kvalité.
+        Från/ av Lithauri
+        Vanligtvis kända som spellbooks, original design är ifrån Lithauri och samtliga är kopior av denna (eller kopior av denna). Sedan den gick förlorad är de äldsta och direkta kopiorna bland de mest värdefulla föremålen i Nerau då ju ”direktare” band till originalet ju kraftfullare (generellt). Därmed om du vill skapa en mäktig spellbook vill du använda en så kraftfull ”bas” som möjligt. I sort sätt alla direkta kopior finns inlåsta djupt under marken i magiskolor, då dessa som originalet aldrig kommer överträffas. En vanlig Fà(BE) kan skapas av vilken kopia som helst, då dessa är designade för kvantitet inte kvalité.
         Generellt sätt kan inte en kopia överträffa originalet, men det finns undantag.
-        
+        <br>
+        <br>
+       Kremilions förstörelse (skriven av archmage Maglor):
+        På alviska:
+        <br>
+        <br>
+        Arorgor
+        <br>
+        <br>
+        Detta är en av de mest omdebatterade delarna i hela Neraus historia för det finns för lite information, mindre än vad som borde vara möjligt. Den skedde under eller i samband med Third Hethen revolt. För att byta ämne och ge kontext, THR var en revolt ifrån folket, i huvudsak folket långt ifrån huvudstäder. Namnet är en efterkonstruktion då man hittade i många byar spår av vad man antar var mänskliga offer, (engelskans sacrifices). Något som har funnits på Nerau men inte på senare tid, det senaste bekräftade fallet före detta var 2000 år sedan var ett bergafolk vars gud (Sergi) (det är även möjligt att Sergi var en profet eller en präst, översättningar av de få texter ifrån detta bergafolk är luddiga i deras ordets betydelse) krävde ritualers som krävde detta eftersom deras ande skulle förbereda inför Sergis återkomst till världen. 
+        <br>
+        <br>
+        I varjefall, THR borde inte ha varit möjligt att förstöra kremilion, Neraus mäktigaste hjältar fanns där, och platsen var träning för alla som ville ut på äventyr, det hade inte varit en lätt plats att inta än mindre förstöra (för denna del i exculars). Vad som är tydligt är att det måste ha varit en massaker, förmodligen på båda sidor. Få överlevde och ännu färre ville tala om det. Det gjordes knappast bättre av att många ifrån kremilion förberedde sig för en räd i fe-berv. (Något som i stort sätt saknade också överlevare)
+        <br>
+        <br>
+        Personligen är min teori att de överlevande blev traumatiserade, möjligtvis för att de tvingades döda folket som de hade svurit att skydda och därmed bröt sina löften. Något som till viss del kan förklara fåtalet vittnesmål gällande detta.
+        <br>
+        <br>
+        Enskilda historier om monster ifrån under templet eller förräderi ifrån andra hjältar finns i gamla vittnesmål ifrån denna tid. (Dock ett förvånansvärt få antal av dessa har överlevt, möjligtvis för att de ansågs felaktiga under sin tid och kastades bort som lögner.)
+        <br>
+        <br>
+        Det har även funnits teorier om att den katastrofala räden mot fe-berv och arorgor har haft samband. Men bevis för detta saknas till stor del. Om målet med räden blivit känt kanske något skulle förklaras.
 
         </div>
    </body>
