Cre.html uppdatering påbörjad

--- a/lore/cre.html
+++ b/lore/cre.html
@@ -9,43 +9,31 @@
         <title>cre</title>
    <head>
    <body>
-  <div>In the beginning there was only chaos Itus, and from chaos the first realm, “Farlands” arose.
+  <div>
+     In the begining there was only 3, Linure, Osiran and Calex and around them nothing. They started communicating, though not with words but with thoughts for they didnt have any Bodies yet.
+<br>
+<br>
+All of then agreed that it was their duty to make something, for that is why they were. Though they couldnt agree which should be in charge.
+Calex refused to create, prefering to alter that which already was.
+Osiran wanted a world in consitant change, a world full of discovery and exploration.
+Meanwhile Linure wanted a strucured world, one that would not degrade over time and in which everyone could achive eternal happiness.
+The argument between Linure and Osirisn soon become a telepathic tempest, full of screaming (as much as thoughts can scream). Yet Calex promised a solution, that they each be given some time to make half the world and then they could inspect each others and discuss the whole world. And so it was.
+<br>
+<br>
+Linure made a perfect world, without any misery, altercation. Yet it was a boring world, with the same acts happening at regular intervalls, even Linure grew restless eventually, essentielty being unneeded in her world.
+<br>
+<br>
+Osiris made an ever changing world, full of discoveries, and exploration, yet this world didn’t have any rules, nothing could be discovered as all that was was beyond understanding. Even Osirian its maker could not make sense of it.
+<br>
+<br>
+Both were happy for a time, until they grew unsatified, both had achived their goal, yet it did not bring any happiness, worse they felt unneeded with nothing left to structer or change.
+<br>
+<br>
+Calex proposed a solution, to make one world combined, with it being neither ordered nor in constant change. A world required change to not be stagnant, but it also needed order to be understood or to live in. Linure and Osirian felt it was at the very least worth a shot.
+<br>
+<br>
+Yet this would be a feat in of itself, to keep a world in balance between order and chaos, they would need help and so they went about making the second generation of gods. Calex prefered meanwhile to watch events unfold, offering assistance if needed.
 
-The farland became the start of order Nerit.
-
-When the farlands were made Order and Chaos became the first gods, by the names of Itus and Nerit. They walked the Farlands and found it empty.
-
-But as the farlands had things previously unheard of and the void left for by the governing of everything that was would not last, the second generation of gods where made
-     <br>
-Leisa: Goddess of the Nature
-Racu: God of Death
-     <br>
-Sarit: God of Justice
-     <br>
-Huro : God of War
-     <br>
-Teru : Goddess of Knowledge
-     <br>
-
-Of course more gods were gods, but only the third through seventh was designed.
-
-But the Farlands were not enough for the gods so they made the outer planes to rule over, agreeing to leave the farlands out of their squabbles.
-
-But as only Itus och Nerit could make new planes they decided to split the deed, Itus made the negative and Nerit made the positive, they let the neutral be made by the combination of both of them.
-
-To channel more sophisticated powers rather than the raw powers of chaos and order, or good and evil they by the advice of Teru made the elemental planes.
-
-Left was only the planes of mortals and as such:
-
-Through the power of Itus, Racu made the shadowfell and through the power of Nerit, Leisa made the feywild.
-
-Left was only the material plane, on which all of the gods were allowed to act.
-
-Most of the mortals were not aligned with any of the gods, allowed to do as they pleased, good or evil, order or chaos, or simply not taking a side.
-
-Many of the material planes were made, an infinite amount to be precise, and once they were done they all agreed to make a separate plane, one not naturally connected to magic, allowing the mortals to live out their lives.
-
-This plane was known as Sekai, and once the mortals came their first they begged the gods to change their minds but as the plane had already been made there was no natural magic anchored to the plane. To change this the 6 exulars where made
  </div>
    </body>
 </html>
