2 Månader sent är bätte än aldrig

--- a/gods/g1.html
+++ b/gods/g1.html
@@ -9,29 +9,44 @@
    <head>
    <body>
      <p>
-      “Good” Gods:
-        <br>
-        <br>
-   Nerit: God of Order LG
-        <br>
-        <br>
-        Symbol: 
-        <br>
-        <br>
-         2 cirklar, 1 vars diameter är hälften av den större, sammanbunden av ett sträck, utom igenom den mindres diameter
-
-        <br>
-        <br>
-        “Evil” Gods:
-        <br>
-        <br>
-        Itus: Goddess of Chaos CE
-        <br>
-        <br>
-        Symbol:
-        <br>
-        <br>
-        Pentagon
+      I början:
+      [Authors note: This is not the orgin of Sekai]
+      <br>
+      <br>
+      In the begining there was only 3, Linure, Osiran and Calex and around them nothing. They started communicating, though not with words but with thoughts for they didnt have any Bodies yet.
+      <br>
+      <br>
+      All of then agreed that it was their duty to make something, for that is why they were. Though they couldnt agree which should be in charge.
+      <br>
+      <br>
+      Calex refused to create, prefering to alter that which already was.
+      <br>
+      <br>
+      Osiran wanted a world in consitant change, a world full of discovery and exploration.
+      <br>
+      <br>
+      Meanwhile Linure wanted a strucured world, one that would not degrade over time and in which everyone could achive eternal happiness.
+      <br>
+      <br>
+      The argument between Linure and Osirisn soon become a telepathic tempest, full of screaming (as much as thoughts can scream). Yet Calex promised a solution, that they each be given some time to make half the world and then they could inspect each others and discuss the whole world. And so it was.
+      <br>
+      <br>
+      Linure made a perfect world, without any misery, altercation. Yet it was a boring world, with the same acts happening at regular intervalls, even Linure grew restless eventually, essentielty being unneeded in her world.
+      <br>
+      <br>
+      Osiris made an ever changing world, full of discoveries, and exploration, yet this world didn’t have any rules, nothing could be discovered as all that was was beyond understanding. Even Osirian its maker could not make sense of it.
+      <br>
+      <br>
+      Both were happy for a time, until they grew unsatified, both had achived their goal, yet it did not bring any happiness, worse they felt unneeded with nothing left to structer or change.
+      <br>
+      <br>
+      Calex proposed a solution, to make one world combined, with it being neither ordered nor in constant change. A world required change to not be stagnant, but it also needed order to be understood or to live in. Linure and Osirian felt it was at the very least worth a shot.
+      <br>
+      <br>
+      Yet this would be a feat in of itself, to keep a world in balance between order and chaos, they would need help and so they went about making the second generation of gods. Calex prefered meanwhile to watch events unfold, offering assistance if needed.
+      <br>
+      <br>
+      
 
 </p>
    </body>
