--- a/lore/pers.html
+++ b/lore/pers.html
@@ -37,6 +37,15 @@
     Myrex
    <br>
    <br>
+   Jaque
+   <br>
+   <br>
+   Rhael
+   <br>
+   <br>
+   Helm
+   <br>
+   <br>
      Pourekhnu, Platinum dragon, Exulars
   <br>
   <br>
