--- a/lore/pers.html
+++ b/lore/pers.html
@@ -30,20 +30,19 @@
      <br>
     <br>
     <br>
-    Aragax Sabli
+    Aragax Sabli (er "mentor" kommer och går som han vill)
     <br>
     <br>
-    <br>
-    Myrex
+    Myrex (snubben som ni gjorde en deal med vid fortet under spelets första dagar. (enligt Alvin beskriven som Patetisk))
    <br>
    <br>
-   Jaque
+   Jaque (Helms bodyguard, offrade sig själv)
    <br>
    <br>
-   Rhael
+   Rhael (Half-elf, har ett svärd, beskriver sig själv som "typ adelsman")
    <br>
    <br>
-   Helm
+   Helm (prins)
    <br>
    <br>
      Pourekhnu, Platinum dragon, Exulars
