varierade fix och ändrignar

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             <div class="Undermeny"> <a href="lore/ryuski.html"> Ryuski </a> </div>
             <div class="Undermeny"> <a href="lore/myth.html"> Myths </a> </div>
             <div class="Undermeny"> <a href="lore/plats.html"> Platser </a> </div>
+            <div class="Undermeny"> <a href="lore/misc.html"> Misc </a> </div>
+            <div class="Undermeny"> <a href="lore/groups.html"> Grupper/Factions </a> </div>
 
 
           </div>
